[project]
name = "final-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fitz>=0.0.1.dev2",
    "notebook>=7.4.4",
    "pandas-stubs==2.3.0.250703",
    "parso>=0.8.4",
    "pydantic>=2.11.7",
    "pymupdf>=1.26.3",
    "tabulate>=0.9.0",
    "traits-stubs==6.4.0",
]
